<resources>
    <string name="app_name">Korawan India</string>
    <string name="username">username</string>
    <string name="login">Login</string>
    <string name="login_help">login help</string>
    <string name="send_otp">send OTP</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="verify">verify</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="update">Update</string>
    <string name="re_enter_password">Re-Enter Password</string>
    <string name="welcome_to_korawan_india_ems">Welcome to KORAWAN INDIA EMS</string>
    <string name="add_employees">Add Employees</string>
    <string name="employees_list">Employees List</string>
    <string name="mark_attendence">Mark Attendence</string>
    <string name="salary_slips">Salary slips</string>
    <string name="summary_report">Summary Report</string>
    <string name="all_generated_reports">All Generated Reports</string>
    <string name="app_settings">App Settings</string>
    <string name="cloud_backup">Cloud Backup</string>
    <string name="basic_pay_day">Basic Pay /-Day</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="designation">Designation</string>
    <string name="full_name">Full Name</string>
    <string name="joining_date">Joining Date</string>
    <string name="nic_employee_id">NIC/Employee ID</string>
    <string name="address_optional">Address (Optional)</string>
    <string name="dob">DOB</string>
    <string name="user"> Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="empty_emloyee_list">Your Employee List is Empty. Please Add Your Employee\'s Detail.</string>
    <string name="add_employee">Add Employee</string>
    <string name="employee_list">Employee List</string>
    <string name="mark_attendance">Mark Attendance</string>
    <string name="generate_report">Generate Report</string>
    <string name="salaryslip">Salary Slips</string>
    <string name="email2">Email</string>
    <string name="full_name2">Full Name</string>
    <string name="nic_employee_id2">NIC/Employee ID</string>
    <string name="mobile_no2">Mobile No.</string>
    <string name="title_activity_login2">LoginActivity2</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_navigation_drawer">Korawan India</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="closedrawer">Close Drawer</string>
    <string name="opendrawer">Open Drawer</string>
</resources>