<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10sp"
    android:layout_margin="10dp"
    tools:context=".activities.NewPasswordGeneration">

    <EditText
        android:id="@+id/edtTextNewPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_new_password"
        android:textStyle="italic|bold"
        android:inputType="textPassword"
        android:padding="10dp"
        android:background="@drawable/edittextdesign"
        android:textSize="24sp"

        />
    <EditText
        android:id="@+id/edtTextReEnterPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/re_enter_password"
        android:textStyle="italic|bold"
        android:inputType="textPassword"
        android:padding="10dp"
        android:background="@drawable/edittextdesign"
        android:textSize="24sp"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/update"
        android:textSize="24sp"
        android:layout_margin="10dp"
        android:textStyle="bold|italic"
        android:background="@drawable/buttondesign"
        android:textColor="@color/white"/>

</LinearLayout>